// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply variant styles corectly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: inline-block;
  text-transform: uppercase;
  font-size: var(--chakra-fontSizes-xs);
  font-family: var(--chakra-fonts-body);
  -webkit-padding-start: var(--chakra-space-1);
  padding-inline-start: var(--chakra-space-1);
  -webkit-padding-end: var(--chakra-space-1);
  padding-inline-end: var(--chakra-space-1);
  border-radius: var(--chakra-radii-sm);
  font-weight: var(--chakra-fontWeights-bold);
  white-space: nowrap;
  vertical-align: middle;
  background-color: var(--chakra-colors-green-100);
  color: var(--chakra-colors-green-800);
  -webkit-margin-start: var(--chakra-space-2);
  margin-inline-start: var(--chakra-space-2);
  -webkit-margin-end: var(--chakra-space-2);
  margin-inline-end: var(--chakra-space-2);
  margin-right: var(--chakra-space-2);
}

.emotion-3 {
  display: inline-block;
  text-transform: uppercase;
  font-size: var(--chakra-fontSizes-xs);
  font-family: var(--chakra-fonts-body);
  -webkit-padding-start: var(--chakra-space-1);
  padding-inline-start: var(--chakra-space-1);
  -webkit-padding-end: var(--chakra-space-1);
  padding-inline-end: var(--chakra-space-1);
  border-radius: var(--chakra-radii-sm);
  font-weight: var(--chakra-fontWeights-bold);
  white-space: nowrap;
  vertical-align: middle;
  background-color: var(--chakra-colors-green-500);
  color: var(--chakra-colors-white);
  -webkit-margin-start: var(--chakra-space-2);
  margin-inline-start: var(--chakra-space-2);
  -webkit-margin-end: var(--chakra-space-2);
  margin-inline-end: var(--chakra-space-2);
  margin-right: var(--chakra-space-2);
}

.emotion-4 {
  display: inline-block;
  text-transform: uppercase;
  font-size: var(--chakra-fontSizes-xs);
  font-family: var(--chakra-fonts-body);
  -webkit-padding-start: var(--chakra-space-1);
  padding-inline-start: var(--chakra-space-1);
  -webkit-padding-end: var(--chakra-space-1);
  padding-inline-end: var(--chakra-space-1);
  border-radius: var(--chakra-radii-sm);
  font-weight: var(--chakra-fontWeights-bold);
  white-space: nowrap;
  vertical-align: middle;
  box-shadow: inset 0 0 0px 1px #3ea76a;
  color: var(--chakra-colors-green-500);
  -webkit-margin-start: var(--chakra-space-2);
  margin-inline-start: var(--chakra-space-2);
  -webkit-margin-end: var(--chakra-space-2);
  margin-inline-end: var(--chakra-space-2);
}

<div
    class="emotion-0 emotion-1"
    data-chakra-component="CStack"
  >
    <div
      class="emotion-2"
      data-chakra-component="CBadge"
    >
      Subtle
    </div>
    <div
      class="emotion-3"
      data-chakra-component="CBadge"
    >
      Solid
    </div>
    <div
      class="emotion-4"
      data-chakra-component="CBadge"
    >
      Outline
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  text-transform: uppercase;
  font-size: var(--chakra-fontSizes-xs);
  font-family: var(--chakra-fonts-body);
  -webkit-padding-start: var(--chakra-space-1);
  padding-inline-start: var(--chakra-space-1);
  -webkit-padding-end: var(--chakra-space-1);
  padding-inline-end: var(--chakra-space-1);
  border-radius: var(--chakra-radii-sm);
  font-weight: var(--chakra-fontWeights-bold);
  white-space: nowrap;
  vertical-align: middle;
  background-color: var(--chakra-colors-gray-100);
  color: var(--chakra-colors-gray-800);
}

<div
    class="emotion-0"
    data-chakra-component="CBadge"
  >
    500
  </div>
</DocumentFragment>
`;
